--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 cf-deployment-tracker==1.0.2
 oauthlib==2.0.1
 tweepy==3.5.0
-web.py==0.38
-multiprocessing==2.6.2.1
+Flask==0.11.1
+numpy==1.12.1
+Werkzeug==0.12.1
